Add express dependency

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "url": "https://github.com/shakibahmed11335544-dotcom/two-person-chat-app/issues"
   },
   "homepage": "https://github.com/shakibahmed11335544-dotcom/two-person-chat-app#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
